--- a/common/build.gradle
+++ b/common/build.gradle
@@ -133,6 +133,7 @@ android {
 }
 
 dependencies {
+    testImplementation project(path: ':testutils')
     //Java 8 - Desugaring - Enabled/Disabled via plugin
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$rootProject.ext.coreLibraryDesugaringVersion"
 
