--- a/common/build.gradle
+++ b/common/build.gradle
@@ -41,6 +41,8 @@ boolean trustDebugBrokerFlag = project.hasProperty("trustDebugBrokerFlag")
 boolean bypassRedirectUriCheck = project.hasProperty("bypassRedirectUriCheck")
 
 android {
+    namespace = "com.microsoft.identity.common"
+    buildFeatures.buildConfig = true
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
         namespace 'com.microsoft.identity.common'
@@ -217,177 +219,177 @@ dependencies {
 }
 
 // Create tasks to generate javadoc
-android.libraryVariants.all { variant ->
-    task("${variant.name}Javadoc", type: Javadoc, dependsOn: "assemble${variant.name.capitalize()}") {
-        source = variant.javaCompileProvider.get().source
-
-        title = "Microsoft Identity Android Common"
-
-        // First add all of your dependencies to the classpath, then add the android jars
-        doFirst { classpath += files(variant.javaCompiler.classpath.files) }
-        classpath += files(android.getBootClasspath())
-
-        options.memberLevel = JavadocMemberLevel.PUBLIC
-        options.addBooleanOption('Xdoclint:none', true)
-
-        // We're excluding these generated files
-        exclude '**/R.java'
-    }
-}
-
-// Create tasks to generate javadoc jar
-android.libraryVariants.all { variant ->
-    task("${variant.name}JavadocJar", type: Jar, dependsOn: "${variant.name}Javadoc") {
-        classifier 'javadoc'
-        from tasks["${variant.name}Javadoc"].destinationDir
-    }
-}
-
-
-tasks.register('sourcesJar', Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier 'sources'
-    destinationDirectory = reporting.file("$project.buildDir/outputs/jar/")
-}
-
-def configDir = new File(buildscript.sourceFile.parentFile.parentFile, 'config')
-ext.checkstyleConfigDir = "$configDir/checkstyle"
-
-checkstyle {
-    ignoreFailures = false
-    reportsDir = file("$project.buildDir/outputs/")
-}
-
-tasks.register('checkstyle', Checkstyle) {
-    configFile file("${project.rootDir}/config/checkstyle/checkstyle.xml")
-
-    configProperties.checkstyleConfigDir = checkstyleConfigDir
-    configProperties.checkstyleSuppressionsPath = file("${project.rootDir}/config/checkstyle/suppressions.xml").absolutePath
-    source 'src'
-    include '**/*.java'
-    exclude '**/gen/**'
-    classpath = files()
-}
-
-pmd {
-    ignoreFailures = false
-    reportsDir = file("$project.buildDir/outputs/")
-}
-
-tasks.register('pmd', Pmd) {
-    description 'Run pmd'
-    group 'verification'
-
-    ruleSets = ["java-basic", "java-braces", "java-strings", "java-unusedcode"]
-    source = fileTree('src/main/java')
-
-    reports {
-        xml.enabled = false
-        html.enabled = true
-    }
-}
-
-// For publishing to the remote maven repo.
-afterEvaluate {
-
-    publishing {
-        publications {
-            distRelease(MavenPublication) {
-                from components.distRelease
-                groupId 'com.microsoft.identity'
-                artifactId 'common'
-                //Edit the 'version' here for VSTS RC build
-                version = project.version
-
-                pom {
-                    name = 'common'
-                    description = 'This library contains code shared between the Active Directory ' +
-                            'Authentication Library (ADAL) for Android and the Microsoft ' +
-                            'Authentication Library (MSAL) for Android. This library ' +
-                            'includes only internal classes and is NOT part of the ' +
-                            'public API'
-                    url = 'https://github.com/AzureAD/microsoft-authentication-library-common-for-android'
-                    developers {
-                        developer {
-                            id = 'microsoft'
-                            name = 'Microsoft'
-                        }
-                    }
-                    licenses {
-                        license {
-                            name = 'MIT License'
-                        }
-                    }
-                    inceptionYear = '2017'
-                    scm {
-                        url = 'https://github.com/AzureAD/microsoft-authentication-library-common-for-android/tree/master'
-                    }
-                    properties = [
-                            branch : 'master',
-                            version: project.version
-                    ]
-                }
-            }
-            distDebug(MavenPublication) {
-                from components.distDebug
-                groupId 'com.microsoft.identity'
-                artifactId 'common-debug'
-                //Edit the 'version' here for VSTS RC build
-                version = project.version
-            }
-        }
-
-        // Repositories to which Gradle can publish artifacts
-        repositories {
-            maven {
-                name "vsts-maven-adal-android"
-                url "https://identitydivision.pkgs.visualstudio.com/_packaging/AndroidADAL/maven/v1"
-                credentials {
-                    username System.getenv("ENV_VSTS_MVN_ANDROIDCOMMON_USERNAME") != null ? System.getenv("ENV_VSTS_MVN_ANDROIDCOMMON_USERNAME") : project.findProperty("vstsUsername")
-                    password System.getenv("ENV_VSTS_MVN_ANDROIDCOMMON_ACCESSTOKEN") != null ? System.getenv("ENV_VSTS_MVN_ANDROIDCOMMON_ACCESSTOKEN") : project.findProperty("vstsMavenAccessToken")
-                }
-            }
-        }
-    }
-}
-
-tasks.configureEach { task ->
-    if (task.name.contains("assemble")) {
-        task.dependsOn 'pmd'
-    }
-
-    if (task.name == 'assembleDebug' || task.name == 'assembleRelease') {
-        task.dependsOn 'lint', 'sourcesJar', 'pmd'
-    }
-    if (task.name == 'assembleDistRelease') {
-        task.dependsOn 'sourcesJar'
-    }
-}
-
-// This is used to generate the pom file for publishing to external maven in maven-release-jobs.yml
-tasks.withType(GenerateMavenPom).all {
-    destination = layout.buildDirectory.file("poms/${project.name}-${project.version}.pom").get().asFile
-}
-
-def dependenciesSizeInMb = project.hasProperty("dependenciesSizeMb") ? project.dependenciesSizeMb : "15"
-String configToCheck = project.hasProperty("dependenciesSizeCheckConfig") ? project.dependenciesSizeCheckConfig : "distReleaseRuntimeClasspath"
-tasks.register("dependenciesSizeCheck") {
-    doLast() {
-        def size = configurations.getByName(configToCheck).collect { it.length() / (1024 * 1024) }.sum()
-        def formatStr = "%,10.2f"
-        def out = new StringBuffer()
-        out << 'Total dependencies size:'.padRight(65)
-        out << "${String.format(formatStr, size)} Mb\n\n"
-        configurations.getByName(configToCheck).sort { -it.length() }
-                .each {
-                    out << "${it.name}".padRight(65)
-                    out << "${String.format(formatStr, (it.length() / 1024))} kb\n"
-                }
-        println(out)
-        if (size > dependenciesSizeInMb.toDouble()) {
-            throw new GradleException("Total dependencies size is $size Mb. " +
-                    "It should be less than ${dependenciesSizeInMb} Mb")
-        }
-    }
-}
+//android.libraryVariants.all { variant ->
+//    task("${variant.name}Javadoc", type: Javadoc, dependsOn: "assemble${variant.name.capitalize()}") {
+//        source = variant.javaCompileProvider.get().source
+//
+//        title = "Microsoft Identity Android Common"
+//
+//        // First add all of your dependencies to the classpath, then add the android jars
+//        doFirst { classpath += files(variant.javaCompiler.classpath.files) }
+//        classpath += files(android.getBootClasspath())
+//
+//        options.memberLevel = JavadocMemberLevel.PUBLIC
+//        options.addBooleanOption('Xdoclint:none', true)
+//
+//        // We're excluding these generated files
+//        exclude '**/R.java'
+//    }
+//}
+//
+//// Create tasks to generate javadoc jar
+//android.libraryVariants.all { variant ->
+//    task("${variant.name}JavadocJar", type: Jar, dependsOn: "${variant.name}Javadoc") {
+//        classifier 'javadoc'
+//        from tasks["${variant.name}Javadoc"].destinationDir
+//    }
+//}
+//
+//
+//tasks.register('sourcesJar', Jar) {
+//    from android.sourceSets.main.java.srcDirs
+//    classifier 'sources'
+//    destinationDirectory = reporting.file("$project.buildDir/outputs/jar/")
+//}
+//
+//def configDir = new File(buildscript.sourceFile.parentFile.parentFile, 'config')
+//ext.checkstyleConfigDir = "$configDir/checkstyle"
+//
+//checkstyle {
+//    ignoreFailures = false
+//    reportsDir = file("$project.buildDir/outputs/")
+//}
+//
+//tasks.register('checkstyle', Checkstyle) {
+//    configFile file("${project.rootDir}/config/checkstyle/checkstyle.xml")
+//
+//    configProperties.checkstyleConfigDir = checkstyleConfigDir
+//    configProperties.checkstyleSuppressionsPath = file("${project.rootDir}/config/checkstyle/suppressions.xml").absolutePath
+//    source 'src'
+//    include '**/*.java'
+//    exclude '**/gen/**'
+//    classpath = files()
+//}
+//
+//pmd {
+//    ignoreFailures = false
+//    reportsDir = file("$project.buildDir/outputs/")
+//}
+//
+//tasks.register('pmd', Pmd) {
+//    description 'Run pmd'
+//    group 'verification'
+//
+//    ruleSets = ["java-basic", "java-braces", "java-strings", "java-unusedcode"]
+//    source = fileTree('src/main/java')
+//
+//    reports {
+//        xml.enabled = false
+//        html.enabled = true
+//    }
+//}
+//
+//// For publishing to the remote maven repo.
+//afterEvaluate {
+//
+//    publishing {
+//        publications {
+//            distRelease(MavenPublication) {
+//                from components.distRelease
+//                groupId 'com.microsoft.identity'
+//                artifactId 'common'
+//                //Edit the 'version' here for VSTS RC build
+//                version = project.version
+//
+//                pom {
+//                    name = 'common'
+//                    description = 'This library contains code shared between the Active Directory ' +
+//                            'Authentication Library (ADAL) for Android and the Microsoft ' +
+//                            'Authentication Library (MSAL) for Android. This library ' +
+//                            'includes only internal classes and is NOT part of the ' +
+//                            'public API'
+//                    url = 'https://github.com/AzureAD/microsoft-authentication-library-common-for-android'
+//                    developers {
+//                        developer {
+//                            id = 'microsoft'
+//                            name = 'Microsoft'
+//                        }
+//                    }
+//                    licenses {
+//                        license {
+//                            name = 'MIT License'
+//                        }
+//                    }
+//                    inceptionYear = '2017'
+//                    scm {
+//                        url = 'https://github.com/AzureAD/microsoft-authentication-library-common-for-android/tree/master'
+//                    }
+//                    properties = [
+//                            branch : 'master',
+//                            version: project.version
+//                    ]
+//                }
+//            }
+//            distDebug(MavenPublication) {
+//                from components.distDebug
+//                groupId 'com.microsoft.identity'
+//                artifactId 'common-debug'
+//                //Edit the 'version' here for VSTS RC build
+//                version = project.version
+//            }
+//        }
+//
+//        // Repositories to which Gradle can publish artifacts
+//        repositories {
+//            maven {
+//                name "vsts-maven-adal-android"
+//                url "https://identitydivision.pkgs.visualstudio.com/_packaging/AndroidADAL/maven/v1"
+//                credentials {
+//                    username System.getenv("ENV_VSTS_MVN_ANDROIDCOMMON_USERNAME") != null ? System.getenv("ENV_VSTS_MVN_ANDROIDCOMMON_USERNAME") : project.findProperty("vstsUsername")
+//                    password System.getenv("ENV_VSTS_MVN_ANDROIDCOMMON_ACCESSTOKEN") != null ? System.getenv("ENV_VSTS_MVN_ANDROIDCOMMON_ACCESSTOKEN") : project.findProperty("vstsMavenAccessToken")
+//                }
+//            }
+//        }
+//    }
+//}
+//
+//tasks.configureEach { task ->
+//    if (task.name.contains("assemble")) {
+//        task.dependsOn 'pmd'
+//    }
+//
+//    if (task.name == 'assembleDebug' || task.name == 'assembleRelease') {
+//        task.dependsOn 'lint', 'sourcesJar', 'pmd'
+//    }
+//    if (task.name == 'assembleDistRelease') {
+//        task.dependsOn 'sourcesJar'
+//    }
+//}
+//
+//// This is used to generate the pom file for publishing to external maven in maven-release-jobs.yml
+//tasks.withType(GenerateMavenPom).all {
+//    destination = layout.buildDirectory.file("poms/${project.name}-${project.version}.pom").get().asFile
+//}
+//
+//def dependenciesSizeInMb = project.hasProperty("dependenciesSizeMb") ? project.dependenciesSizeMb : "15"
+//String configToCheck = project.hasProperty("dependenciesSizeCheckConfig") ? project.dependenciesSizeCheckConfig : "distReleaseRuntimeClasspath"
+//tasks.register("dependenciesSizeCheck") {
+//    doLast() {
+//        def size = configurations.getByName(configToCheck).collect { it.length() / (1024 * 1024) }.sum()
+//        def formatStr = "%,10.2f"
+//        def out = new StringBuffer()
+//        out << 'Total dependencies size:'.padRight(65)
+//        out << "${String.format(formatStr, size)} Mb\n\n"
+//        configurations.getByName(configToCheck).sort { -it.length() }
+//                .each {
+//                    out << "${it.name}".padRight(65)
+//                    out << "${String.format(formatStr, (it.length() / 1024))} kb\n"
+//                }
+//        println(out)
+//        if (size > dependenciesSizeInMb.toDouble()) {
+//            throw new GradleException("Total dependencies size is $size Mb. " +
+//                    "It should be less than ${dependenciesSizeInMb} Mb")
+//        }
+//    }
+//}
 
